--- a/css/home.css
+++ b/css/home.css
@@ -272,3 +272,158 @@ body {
 .dropdown-menu a:hover {
   background-color: #f5f5f5;
 }
+
+.product-detail-container {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 40px 5%;
+  gap: 20px;
+}
+
+.product-images {
+  flex: 1;
+  min-width: 300px;
+}
+
+.product-images .main-image {
+  width: 60%;
+  border-radius: 10px;
+}
+
+.thumbnails {
+  display: flex;
+  gap: 20px;
+  margin-top: 10px;
+}
+
+.thumbnails img {
+  width: 70px;
+  height: 70px;
+  object-fit: cover;
+  border-radius: 6px;
+  border: 1px solid #ccc;
+  cursor: pointer;
+}
+
+.product-info {
+  flex: 1;
+  min-width: 300px;
+}
+
+.product-info h2 {
+  margin-bottom: 10px;
+}
+
+.product-info .price {
+  color: red;
+  font-size: 18px;
+  margin-bottom: 15px;
+}
+.select-group {
+  margin: 16px 0;
+}
+
+.select-group label {
+  display: block;
+  margin-bottom: 8px;
+  font-weight: 500;
+}
+
+.select-buttons {
+  display: flex;
+  gap: 10px;
+  flex-wrap: wrap;
+}
+
+.select-buttons button {
+  min-width: 90px;
+  padding: 8px 12px;
+  border: 2px solid #aaa;
+  border-radius: 6px;
+  background-color: white;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+.select-buttons button:hover {
+  background-color: rgb(159, 157, 157);
+}
+
+.select-buttons button.active {
+  border: 2px solid black;
+  background-color: #f2f2f2;
+}
+
+.select-buttons button.selected {
+  background-color: rgb(159, 157, 157);
+  color: rgb(0, 0, 0);
+}
+
+.actions {
+  margin: 24px 0 16px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.actions .add-to-cart,
+.actions .buy-now {
+  padding: 12px;
+  border-radius: 4px;
+  font-weight: bold;
+  font-size: 14px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.actions .add-to-cart {
+  background: white;
+  color: black;
+  border: 1px solid black;
+}
+
+.actions .add-to-cart:hover,
+.actions .add-to-cart.active {
+  background: rgb(159, 157, 157);
+}
+
+.actions .buy-now {
+  background: black;
+  color: white;
+  border: none;
+}
+
+.actions .buy-now:hover,
+.actions .buy-now.active {
+  background: rgb(159, 157, 157);
+  color: black;
+}
+
+/* Related products */
+.related-products {
+  padding: 40px 5%;
+  text-align: center;
+}
+
+.related-products h3 {
+  font-size: 20px;
+  margin-bottom: 20px;
+}
+
+.product-list2 {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 70px;
+}
+
+.product-item {
+  width: 200px;
+  text-align: center;
+}
+
+.product-item img {
+  width: 100%;
+  border-radius: 8px;
+  object-fit: cover;
+}
