--- a/public/css/home.css
+++ b/public/css/home.css
@@ -155,6 +155,11 @@ body {
   transition: 0.3s;
 }
 
+.product a {
+  text-decoration: none;
+  color: inherit;
+}
+
 .product:hover {
   box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
   transform: translateY(-4px);
